fix an issue where tabout page didn't scroll properly on mobile

--- a/public/assets/css/components/_controls.scss
+++ b/public/assets/css/components/_controls.scss
@@ -37,6 +37,7 @@ $controls-width-mobile: 100%;
   border: 1px solid #eee;
   border-radius: 6px;
   z-index: 999999999;
+  background-color: $white;
 
   transition: $transition;
   left: 1.75%;
