--- a/public/assets/css/components/_footer.scss
+++ b/public/assets/css/components/_footer.scss
@@ -1,6 +1,7 @@
 #footer-wrap {
   width: 100%;
-
+  background-color: $white;
+  
   > div {
     padding: 20px 0px 40px 0px;
     width: 65%;
