--- a/public/assets/css/components/_header.scss
+++ b/public/assets/css/components/_header.scss
@@ -7,9 +7,9 @@
   height: 8vh;
   background-color: $white;
   color: $black;
-  border-bottom: 1px solid $lavender;
+  border-bottom: 1px solid $off-white;
 
-  > div {
+  div {
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -37,5 +37,16 @@
 }
 
 @media screen and (max-width: $bp-mobile) {
+  .header-wrap {
+    div {
+      &:first-child {
+        padding-left: 15px;
+        h6 { margin-left: 8px; }
+      }
 
+      &:last-child {
+        * { margin-right: 8px; }
+      }
+    }
+  }
 }
